# rider-drive

./: AUDIT.md  README.md  UI-FIX-REPORT.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
indrive-clone-backend/: .env.example  README.md  buf.gen.go.yaml  buf.gen.yaml  docker-compose.yml
indrive-clone-backend/api-gateway-hono/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
indrive-clone-backend/api-gateway-hono/src/: app.ts  bootstrap.ts  config.ts  index.ts
indrive-clone-backend/computation-rust/: Cargo.toml  Dockerfile  build.rs
indrive-clone-backend/computation-rust/src/: grpc_server.rs  main.rs  pricing.rs
indrive-clone-backend/realtime-go/: Dockerfile  go.mod  go.sum
indrive-clone-backend/realtime-go/proto/: indrive.pb.go  indrive.proto  indrive_grpc.pb.go
indrive-clone-backend/realtime-go/scripts/: dev.ps1
src/: App.tsx
src/api/: backend.ts  dto.ts  index.ts  mock-data.ts  mock-provider.ts  realtime.ts  types.ts
src/components/settings/: ThemeSettings.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  index.ts  (+4 more)
src/constants/: app.ts  index.ts
src/layouts/: auth-layout.tsx  index.ts  main-layout.tsx
src/store/: index.ts
src/styles/: index.css
src/theme/: ThemeContext.tsx  colors.ts  defaultTheme.ts  generateCssVariables.ts  index.ts  radius.ts  shadows.ts  spacing.ts  theme-provider.tsx  themeStore.ts  themeTypes.ts  transitions.ts  types.ts  typography.ts
src/types/: common.ts  index.ts
src/utils/: helpers.ts  index.ts
(+42 files in other folders)
