[package]
name = "computation-rust"
version = "0.1.0"
edition = "2021"
description = "InDrive Clone — Pricing & Routing Engine (Haversine, surge, OSRM data)"

[[bin]]
name = "pricing-server"
path = "src/main.rs"

[dependencies]
# Axum for the optional REST/HTTP debug endpoint
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
# tonic = gRPC server, prost = protobuf codec
tonic = "0.11"
prost = "0.12"
# Generated proto stubs live in src/proto (produced by buf generate)
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-build = "0.11"
# Vendored protoc binary so the build needs no system protobuf-compiler.
protoc-bin-vendored = "3"
